--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "jquery": "2.1.1",
     "lodash": "2.4.1",
     "requirejs": "~2.1.14",
-    "sprintfjs": "1.1.3"
+    "sprintf": "1.1.1"
   },
   "main": "src/bootstrap-number-spinner.js"
 }
